--- a/auth/src/assets/css/appointment-form.css
+++ b/auth/src/assets/css/appointment-form.css
@@ -938,7 +938,7 @@ input[type="date"]::-webkit-clear-button {
     width: auto;
     object-fit: contain;
     display: block;
-    margin-left: 0;
+    margin-left: auto;
     margin-right: auto;
 }
 
@@ -1068,11 +1068,16 @@ input[type="date"]::-webkit-clear-button {
 
     .footer-brand {
         align-items: center;
+        text-align: center;
+    }
+
+    .footer-brand p {
+        text-align: center;
     }
 
     .footer-logo-img {
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: auto !important;
+        margin-right: auto !important;
     }
 }
 
